src/objects/Som_Quotex__c.object
<CustomObject>
    <description>Enthält die kumulierten Quotexdaten aus Pinnball zum Account nach NielsenID und Jahr</description>
    <fields>
        <fullName>SomDig_71M_SoA__c</fullName>
        <description>Anteil 71M-Umsatz am Digital-Umsatz</description>
        <formula>IF(SomDig_GesamtDigital__c=0, 0, SomDig_71M__c/SomDig_GesamtDigital__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil 71M-Umsatz am Digital-Umsatz</inlineHelpText>
        <label>71M Digital SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_71M__c</fullName>
        <description>Kumulierter Umsatz der digitalen Werbeträger der SEVENONE MEDIA</description>
        <inlineHelpText>Kumulierter Umsatz der digitalen Werbeträger der SEVENONE MEDIA</inlineHelpText>
        <label>71M Digital</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_Medienklasse__c</field>
            <operation>equals</operation>
            <value>ONLINE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_Vermarkter__c</field>
            <operation>contains</operation>
            <value>SEVENONE MEDIA</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_ASMI_SoA__c</fullName>
        <description>Anteil ASMI-Umsatz am Digital-Umsatz</description>
        <formula>IF ( SomDig_GesamtDigital__c = 0 , 0 , SomDig_ASMI__c / SomDig_GesamtDigital__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil ASMI-Umsatz am Digital-Umsatz</inlineHelpText>
        <label>ASMI SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_ASMI__c</fullName>
        <description>Summe von Brutto des Vermarkters Axel Springer Media Impact aus der Medienklasse Online</description>
        <inlineHelpText>Kumulierter Umsatz der digitalen Werbeträger der AXEL SPRINGER MEDIA IMPACT</inlineHelpText>
        <label>ASMI</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_Medienklasse__c</field>
            <operation>equals</operation>
            <value>ONLINE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_Vermarkter__c</field>
            <operation>contains</operation>
            <value>AXEL SPRINGER</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_GesamtDigital__c</fullName>
        <description>Alle Umsätze Digital</description>
        <inlineHelpText>Alle Umsätze Digital</inlineHelpText>
        <label>Gesamt Digital</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_Medienklasse__c</field>
            <operation>equals</operation>
            <value>ONLINE</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_IP_SoA__c</fullName>
        <description>Anteil IP-Umsatz am Digital-Umsatz</description>
        <formula>IF ( SomDig_GesamtDigital__c = 0 , 0 , SomDig_IP__c / SomDig_GesamtDigital__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil IP-Umsatz am Digital-Umsatz</inlineHelpText>
        <label>IP Digital SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_IP__c</fullName>
        <description>Summe von Brutto des Vermarkters IP Deutschland aus der Medienklasse Online</description>
        <inlineHelpText>Kumulierter Umsatz der digitalen Werbeträger der IP DT</inlineHelpText>
        <label>IP Digital</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_Medienklasse__c</field>
            <operation>equals</operation>
            <value>ONLINE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_Vermarkter__c</field>
            <operation>startsWith</operation>
            <value>IP DT</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_Universe_SoA__c</fullName>
        <description>Anteil 71M-Umsatz am Universe-Umsatz</description>
        <formula>IF ( SomDig_Universe__c  = 0 , 0 , SomDig_71M__c / SomDig_Universe__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil 71M-Umsatz am Universe-Umsatz</inlineHelpText>
        <label>Universe Digital SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Universe__c</fullName>
        <description>Summe aus 71M und IP</description>
        <formula>SomDig_71M__c +  SomDig_IP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kumulierter Umsatz Digital der Vermarkter 71M und IP</inlineHelpText>
        <label>Universe Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Som_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotexdaten</relationshipLabel>
        <relationshipName>Quotexdaten</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Som_Datenstand__c</fullName>
        <description>auf welchen Zeitraum beziehen sich die momentanen Daten. Inklusive Angabe des DAtenstands der Daten.</description>
        <inlineHelpText>auf welchen Zeitraum beziehen sich die momentanen Daten. Inklusive Angabe des DAtenstands der Daten.</inlineHelpText>
        <label>Datenstand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_GesamtMkl__c</fullName>
        <description>Umsätze aller Medienklassen</description>
        <inlineHelpText>Umsätze aller Medienklassen</inlineHelpText>
        <label>Gesamt Medienklasse</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_MedienklasseGruppe__c</field>
            <operation>equals</operation>
            <value>TV, Digital, Print, Rest</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_GesamtTv__c</fullName>
        <description>Umsätze alle TV</description>
        <inlineHelpText>Umsätze alle TV</inlineHelpText>
        <label>Gesamt TV</label>
        <summarizedField>Som_QuotexTv__c.Som_Brutto__c</summarizedField>
        <summaryForeignKey>Som_QuotexTv__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_Jahr__c</fullName>
        <label>Jahr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_MklGruppeDigital__c</fullName>
        <description>Umsatz der Medienklasse ONLINE</description>
        <inlineHelpText>Umsatz der Medienklasse ONLINE</inlineHelpText>
        <label>Digital</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_MedienklasseGruppe__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_MklGruppePrint__c</fullName>
        <description>Kumulierter Umsatz der Medienklassen Zeitungen, Publikumszeitschriften, Fachzeitschriften</description>
        <inlineHelpText>Kumulierter Umsatz der Medienklassen Zeitungen, Publikumszeitschriften, Fachzeitschriften</inlineHelpText>
        <label>Print</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_MedienklasseGruppe__c</field>
            <operation>equals</operation>
            <value>Print</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_MklGruppeRest__c</fullName>
        <description>Kumulierter Umsatz der Medienklassen Radio, Kino, Out of Home</description>
        <inlineHelpText>Kumulierter Umsatz der Medienklassen Radio, Kino, Out of Home</inlineHelpText>
        <label>Rest</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_MedienklasseGruppe__c</field>
            <operation>equals</operation>
            <value>Rest</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_MklGruppeTV__c</fullName>
        <description>Umsatz der Medienklasse TV</description>
        <inlineHelpText>Umsatz der Medienklasse TV</inlineHelpText>
        <label>TV</label>
        <summarizedField>Som_QuotexMedienklasse__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexMedienklasse__c.Som_MedienklasseGruppe__c</field>
            <operation>equals</operation>
            <value>TV</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexMedienklasse__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_NielsenIds__c</fullName>
        <description>Liste aller dem Account zugehörigen Nielsen IDs</description>
        <inlineHelpText>Liste aller dem Account zugehörigen Nielsen IDs</inlineHelpText>
        <label>Nielsen-IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ProRexId__c</fullName>
        <description>Die ProRex-ID des zugehörigen Accounts.</description>
        <formula>Som_Account__r.AccountNumber</formula>
        <inlineHelpText>Die ProRex-ID des zugehörigen Accounts.</inlineHelpText>
        <label>Accountnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Soa71M__c</fullName>
        <description>Anteil 71M-Umsatz am TV-Umsatz</description>
        <formula>IF(Som_GesamtTv__c=0, 0,  Som_Wt71m__c/Som_GesamtTv__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil 71M-Umsatz am TV-Umsatz</inlineHelpText>
        <label>71M TV SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_SoaDigital__c</fullName>
        <description>Anteil Digital-Umsatz am Gesamt-Umsatz</description>
        <formula>IF( Som_GesamtMkl__c = 0, 0,  Som_MklGruppeDigital__c/Som_GesamtMkl__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil Digital-Umsatz am Gesamt-Umsatz</inlineHelpText>
        <label>Digital SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_SoaIp__c</fullName>
        <description>Anteil IP-Umsatz am TV-Umsatz</description>
        <formula>IF( Som_GesamtTv__c=0 , 0,  Som_WtIp__c/Som_GesamtTv__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil IP-Umsatz am TV-Umsatz</inlineHelpText>
        <label>IP TV SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_SoaPrint__c</fullName>
        <description>Anteil Print-Umsatz am Gesamt-Umsatz</description>
        <formula>IF( Som_GesamtMkl__c = 0, 0,  Som_MklGruppePrint__c/Som_GesamtMkl__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil Print-Umsatz am Gesamt-Umsatz</inlineHelpText>
        <label>Print SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_SoaRest__c</fullName>
        <description>Anteil Rest-Umsatz am Gesamt-Umsatz</description>
        <formula>IF(Som_GesamtMkl__c = 0, 0, Som_MklGruppeRest__c/Som_GesamtMkl__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil Rest-Umsatz am Gesamt-Umsatz</inlineHelpText>
        <label>Rest SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_SoaTV__c</fullName>
        <description>Anteil TV-Umsatz am Gesamt-Umsatz</description>
        <formula>IF( Som_GesamtMkl__c = 0, 0,  Som_MklGruppeTV__c / Som_GesamtMkl__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil TV-Umsatz am Gesamt-Umsatz</inlineHelpText>
        <label>TV SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_SoaUniverse__c</fullName>
        <description>Anteil 71-Media-Umsatz am Universe-Umsatz</description>
        <formula>IF( Som_WtUniverse__c =0, 0,  Som_Wt71m__c/Som_WtUniverse__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anteil 71-Media-Umsatz am Universe-Umsatz</inlineHelpText>
        <label>Universe TV SoA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_UniqueKey__c</fullName>
        <description>stellt Eindeutigkeit sicher des zusammengesetzten Schlüssels:
Jahr + Zeitraum + Account</description>
        <inlineHelpText>stellt Eindeutigkeit sicher des zusammengesetzten Schlüssels:
Jahr + Zeitraum + Account</inlineHelpText>
        <label>Som_UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Som_Wt71m__c</fullName>
        <description>Kumulierter Umsatz der Werbeträger der SEVENONE MEDIA</description>
        <inlineHelpText>Kumulierter Umsatz der Werbeträger der SEVENONE MEDIA</inlineHelpText>
        <label>71M TV</label>
        <summarizedField>Som_QuotexTv__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexTv__c.Som_Vermarkter__c</field>
            <operation>startsWith</operation>
            <value>SEVENONE MEDIA</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexTv__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_WtIp__c</fullName>
        <description>Kumulierter Umsatz der Sender der IP DEUTSCHLAND</description>
        <inlineHelpText>Kumulierter Umsatz der Sender der IP DEUTSCHLAND</inlineHelpText>
        <label>IP TV</label>
        <summarizedField>Som_QuotexTv__c.Som_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>Som_QuotexTv__c.Som_Vermarkter__c</field>
            <operation>startsWith</operation>
            <value>IP DT</value>
        </summaryFilterItems>
        <summaryForeignKey>Som_QuotexTv__c.Som_Quotexdaten__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_WtUniverse__c</fullName>
        <description>Kumulierter Umsatz der Vermarkter 71Media und IP</description>
        <formula>Som_Wt71m__c +  Som_WtIp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kumulierter Umsatz der Vermarkter 71Media und IP</inlineHelpText>
        <label>Universe TV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Som_ZeitraumTyp__c</fullName>
        <description>GJ=Gesamtjahr, YTM=YearToMonth</description>
        <inlineHelpText>GJ=Gesamtjahr, YTM=YearToMonth</inlineHelpText>
        <label>Zeitraum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Quotexdaten</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>Som_Jahr__c</columns>
        <columns>Som_GesamtTv__c</columns>
        <columns>Som_Datenstand__c</columns>
        <columns>Som_UniqueKey__c</columns>
        <columns>Som_ZeitraumTyp__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Quotex-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotexdaten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>